site title span grid to fix float collapse

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 @responsive {
     .bg-cliptext-swirl {
-      @apply text-transparent py-10 bg-center bg-burst-exp bg-contain bg-no-repeat bg-clip-text;
+      @apply text-transparent bg-center bg-burst-exp bg-cover bg-no-repeat bg-clip-text;
     }
 }
 
